# CMAKE_TEMPLATE

./: CMakeLists.txt  README.md
src/: MyProject.aps  MyProject.rc  main.cpp
